--- a/assets/themes/hive/assets/themes/hive/bootstrap/css/slider.css
+++ b/assets/themes/hive/assets/themes/hive/bootstrap/css/slider.css
@@ -548,3 +548,133 @@
 	}
 
 }
+
+
+/* ===== #slider ===== */
+
+.sl-slider-wrapper {
+    border-top: none;
+    width: 800px;
+    height: 400px;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+}
+.sl-slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.sl-slide,
+.sl-slides-wrapper,
+.sl-slide-inner {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+} 
+.sl-slide {
+    z-index: 1;
+}
+.slider-wrapper .sl-slider-wrapper{
+    height: 500px;
+}
+.slider-img{
+    z-index: 60;
+}
+.sl-content-slice {
+    overflow: hidden;
+    position: absolute;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    background: #fff;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+    opacity : 1;
+}
+.sl-slide-horizontal .sl-content-slice {
+    width: 100%;
+    height: 50%;
+    left: -200px;
+    -webkit-transform: translateY(0%) scale(1);
+    -moz-transform: translateY(0%) scale(1);
+    -o-transform: translateY(0%) scale(1);
+    -ms-transform: translateY(0%) scale(1);
+    transform: translateY(0%) scale(1);
+}
+.sl-slide-horizontal .sl-content-slice:first-child {
+    top: -200px;
+    padding: 200px 200px 0px 200px;
+}
+.sl-slide-horizontal .sl-content-slice:nth-child(2) {
+    top: 50%;
+    padding: 0px 200px 200px 200px;
+}
+.sl-slide-vertical .sl-content-slice {
+    width: 50%;
+    height: 100%;
+    top: -200px;
+    -webkit-transform: translateX(0%) scale(1);
+    -moz-transform: translateX(0%) scale(1);
+    -o-transform: translateX(0%) scale(1);
+    -ms-transform: translateX(0%) scale(1);
+    transform: translateX(0%) scale(1);
+}
+.sl-slide-vertical .sl-content-slice:first-child {
+    left: -200px;
+    padding: 200px 0px 200px 200px;
+}
+.sl-slide-vertical .sl-content-slice:nth-child(2) {
+    left: 50%;
+    padding: 200px 200px 200px 0px;
+}
+.sl-content-wrapper {
+    position: absolute;
+}
+.sl-content {
+    width: 100%;
+    height: 100%;
+    background: #fff;
+}
+.sl-slide-horizontal .sl-slide-inner {
+    background: #ddd;
+}
+.sl-slide-vertical .sl-slide-inner {
+    background: #ccc;
+}
+
+.slider-wrapper .bg-1 .sl-slide-inner, .slider-wrapper .bg-1 .sl-content-slice {
+    background-image: url("{{ ASSET_PATH }}/bootstrap/images/home-slider/home-slider-1.jpg");
+    background-position: 0 center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+.slider-wrapper .sl-slide h2 {
+}
+.slider-wrapper .bg-2 .sl-slide-inner, .slider-wrapper .bg-2 .sl-content-slice {
+    background-image: url("{{ ASSET_PATH }}/bootstrap/images/home-slider/home-slider-2.jpg");
+    background-position: 0 center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+.slider-wrapper .bg-2 [data-icon]:after, .slider-wrapper .bg-2 h2 {
+}
+.slider-wrapper .bg-3 .sl-slide-inner, .slider-wrapper .bg-3 .sl-content-slice {
+    background-image: url("{{ ASSET_PATH }}/bootstrap/images/home-slider/home-slider-3.jpg");
+    background-position: 0 center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+.slider-wrapper .bg-3 h2, .slider-wrapper .bg-3 blockquote {
+}
+
+
+
