--- a/assets/themes/hive/_includes/themes/hive/index.html
+++ b/assets/themes/hive/_includes/themes/hive/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
 
-	<!-- start: Meta -->
 	<meta charset="utf-8">
-	<title>Even - Responsive portofolio at Bootstrap </title> 
-	<meta content="Responsive portofolio at Bootstrap" name="description">
-	<meta content="light, responsive, portofolio" name="keywords">
-	<!-- end: Meta -->
+	<title>      {% if page.title %}
+        {{ page.title }} - 
+      {% endif %}
+      {{ site.title }}
+    </title>
+    {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
+    <meta name="author" content="{{ site.author.name }}">
+	
 	
 	<!-- start: Mobile Specific -->
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
