--- a/assets/themes/hive/css/color.css
+++ b/assets/themes/hive/css/color.css
@@ -7,7 +7,7 @@ hover change: #d35400
 */
 
 body {
-    background-color: #424242;
+    background-color: #FDFCFC;
     color: #424242;
 }
 a, b {
@@ -43,9 +43,11 @@ a.tip:hover span {
 
 ::-moz-selection {
 background:#d35400;
+color:#FDFCFC;
 }
 ::selection { 
 background:#d35400;
+color:#FDFCFC;
 }
 .icon-muted {
     color: #E9E9E9;
@@ -362,7 +364,7 @@ blockquote p:after {
     color: #FDFCFC;
 }
 .nav-tabs > .active > a, .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
-    background-color: #424242;
+    background-color: #FDFCFC;
     border-color: #DDDDDD #DDDDDD transparent;
     color: #d35400;
 }
