--- a/assets/themes/hive/css/color.css
+++ b/assets/themes/hive/css/color.css
@@ -5,9 +5,8 @@ main : #FF9900
 hover change: #d35400
 
 */
-
 body {
-    background-color: #FDFCFC;
+    background-color: #424242;
     color: #424242;
 }
 a, b {
@@ -35,6 +34,7 @@ a.tip:hover span {
 
 .navbar .brand {
     color: #FF9900;
+    background-color: #424242;
 }
 .navbar .brand:hover,
 .navbar .brand:focus {
@@ -43,17 +43,17 @@ a.tip:hover span {
 
 ::-moz-selection {
 background:#d35400;
-color:#FDFCFC;
+background-color: #424242;
 }
 ::selection { 
 background:#d35400;
-color:#FDFCFC;
+background-color: #424242;
 }
 .icon-muted {
     color: #E9E9E9;
 }
-.navbar .nav > li > a{   
-    color: #FF9900;
+.navbar .nav > li > a{
+	color: #FF9900;
 }
 .navbar .nav > li > a:hover {
     color: #d35400;
@@ -66,6 +66,7 @@ color:#FDFCFC;
 }
 .navbar .nav li.dropdown.open > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.open.active > .dropdown-toggle {
     color: #FF9900;
+    background-color: #424242;
 }
 .navbar .nav > li.active > a,
 .navbar .nav > li.active > a:hover,
@@ -84,7 +85,7 @@ color:#FDFCFC;
 
 .navbar .btn-navbar {
     background-color: #FF9900;
-    color: #FDFCFC;
+    color: #424242;
 }
 .navbar .btn-navbar:hover{
     background-color: #d35400;
@@ -95,8 +96,15 @@ color:#FDFCFC;
 .navbar .nav > li > .dropdown-menu:after {
     border-bottom: 6px solid #FF9900;
 }
+
+.navbar-fixed-top ul li {
+  color: #424242;
+  background: #424242;
+}
+
 .navbar-inner {
-    background-color: #424242;
+    color: #424242;
+    background: #424242;
 }
 .navbar .nav ul li {
   background-color: #424242;
@@ -106,7 +114,8 @@ background-color: #FF9900;
 color: #424242; 
 }
 .navbar .nav ul a:hover {
-background-color: #FF9900;
+    color: #d35400;
+	background-color: #FF9900;
 }
 .navbar-unread,
 .navbar-new {
@@ -135,35 +144,17 @@ background-color: #FF9900;
   border-top-color: #FF9900;
 }
 
-.top-account > a.top-sign-in {
-    background-color: #FF9900;
-    color: #FDFCFC !important;
-}
-.top-account > a.top-sign-in:hover {
-    background-color: #1A1A1A !important;
-    color: #FDFCFC !important;
-}
-.top-account > a.top-sign-up {
-    background-color: #FDFCFC !important;
-    color: #1A1A1A !important;
-}
-.top-account > a.top-sign-up:hover {
-    background-color: #FDFCFC !important;
-}
-.dropdown-menu li > a:hover, .dropdown-menu li > a:focus, .dropdown-submenu:hover > a {
-    background-color: #424242;
-    color: #FF9900;
-}
 .dropdown-menu .active > a, .dropdown-menu .active > a:hover {
-    background-color: #424242;
     color: #FF9900;
+    background-color: #424242;
 }
 .dropdown-menu li > a:hover, .dropdown-menu li > a:focus, .dropdown-submenu:hover > a {
     color: #424242;
+    background-color: #424242;
 }
 textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
     border: 2px solid #E9E9E9;
-    color: #1A1A1A;
+    color: #424242;
 }
 textarea:focus,
   input[type="text"]:focus,
@@ -183,135 +174,7 @@ textarea:focus,
   .uneditable-input:focus {
     border-color: #FF9900;
      }
-.progress .bar, .ui-slider .bar {
-    background: #424242;
-}
-.todo {
-    background-color: #d35400;
-    color: #FF9900;
-}
-.todo-search {
-    background: url("../images/flat/todo/search.png") no-repeat scroll 92% center / 16px 16px #E9E9E9;
-}
-.todo li {
-    background: url("../images/flat/todo/todo.png") no-repeat scroll 92% center / 20px 20px #1A1A1A;
-}
-.todo li.todo-done {
-    color: #E9E9E9;
-}
-.todo-name {
-    color: #FDFCFC;
-}
-.todo li.todo-done .todo-name {
-    color: #FDFCFC;
-}
-.todo-search-field:focus,.todo-search-field:hover,.todo-search-field:active{
-    border-color: #E9E9E9 !important;
-}
-.dk_open {
-   }
-  .dk_open .dk_toggle {
-    background-color: #1A1A1A; }
-    .dk_open .dk_toggle .select-icon {
-      background-color: #1A1A1A;
-      border-left-color: transparent; }
 
-.dk_toggle {
-    background-color: #1A1A1A;
-}
-  .dk_toggle:hover, .dk_toggle:focus, .dk_focus .dk_toggle {
-    background-color: #1A1A1A;
-    color: white;
- }
-  .dk_toggle:active {
-    background-color: #1A1A1A;
- }
-    .dk_toggle:active .select-icon {
- }
-.select-icon {
-    background: url("../images/flat/select/toggle.png") no-repeat scroll right center #1A1A1A;
-}
-.dk_open .dk_toggle .select-icon {
-    background-color: #1A1A1A;
-}
-.dk_options.when {
-    width: 243px;
-}
-.dk_options {
-
-   }
-  .dk_options:before {
-    border-color: transparent transparent #1A1A1A transparent; }
-  .dk_options:before { }
-  .dk_options li { }
-  .dk_options a { }
-    .dk_options a:hover {
-      background-color: #FF9900;
-      color:#FDFCFC; }
-
-.dk_option_current a {
-  background-color: #1A1A1A; }
-
-.dk_options_inner {
-  background-color: #1A1A1A;
- }
-.alert-danger, .alert-error {
-    background-color: #d35400 ;
-    color: #FDFCFC;
-}
-.alert-danger h4, .alert-error h4 {
-    color: #FDFCFC;
-}
-.pagination ul {
-    background: none repeat scroll 0 0 #E9E9E9;
-}
-.pagination ul > li > a, .pagination ul > li > span {
-    background: none repeat scroll 0 0 #FDFCFC;
-    border: 5px solid #FDFCFC;
-    color: #FDFCFC;
-}
-.pagination ul > li > a:hover, .pagination ul > li > a *:focus, .pagination ul > li > span:hover, .pagination ul > li > span *:focus {
-    background-color: #1A1A1A;
-    border-color: #1A1A1A;
-    color: #FDFCFC;
-}
-.pagination ul > li.next > a, .pagination ul > li.next > span {
-    border-left: 2px solid #FDFCFC !important;
-}
-.pagination ul > li.previous > a, .pagination ul > li.previous > span, .pagination ul > li.next > a, .pagination ul > li.next > span {
-    border-right: 2px solid #FDFCFC !important;
-}
-.front {
-color: #FDFCFC;
-background: #d35400;
-}
-.front .flip-a a{
-    color: #FDFCFC;
-}
-.client-back {
-    background: #FDFCFC;
-}
-.white-content {
-    background-color: #E9E9E9;
-}
-.hover-mask:hover{
-    background-color: #FF9900;
-}
-.img-mask .back .flip-b {
-    background: #FF9900;
-}
-.section-features {
-    background-color: #E9E9E9;
-}
-.section-features .info-features > i {
-    color: #d35400;
-}
-.section-features .info-features h5 {
-    color: #d35400;
-}
-.section-features .info-features p {
-    color: #d35400;
-}
 .accordion-group {
     border-top: 1px solid #F4F5F7;
 }
@@ -324,35 +187,7 @@ blockquote p {
 blockquote p:after {
     border-top-color: #E9E9E9;
 }
-.carousel-control {
-    background: none repeat scroll 0 0 #FF9900;
-    border: 0px solid #FDFCFC;
-    color: #FDFCFC;
-}
-.carousel-indicators .active {
-    background-color: #FDFCFC;
-}
-.sl-content {
-    width: 100%;
-    height: 100%;
-    background: #FDFCFC;
-}
-.sl-slide-horizontal .sl-slide-inner {
-    background: #ddd;
-}
-.sl-slide-vertical .sl-slide-inner {
-    background: #ccc;
-}
 
-.slider-wrapper .sl-slide h2 {
-    color: #d35400;
-}
-.slider-wrapper .bg-2 [data-icon]:after, .slider-wrapper .bg-2 h2 {
-    color: #FDFCFC;
-}
-.slider-wrapper .bg-3 h2, .slider-wrapper .bg-3 blockquote {
-    color: #FDFCFC;
-}
 .social-icon{
     background-color: #d35400;
     border-top: 5px solid #E9E9E9;
@@ -369,120 +204,9 @@ blockquote p:after {
     color: #d35400;
 }
 .nav > li > a:hover, .nav > li > a:focus {
-    background-color: #E9E9E9;
+    background-color: #424242;
 }
-.wrapper-features .container{
-    border-bottom: 1px solid #E9E9E9;
-}
-.section-features .info-features h6 {
-    color: #d35400;
-}
-.page-title{
-    background:#E9E9E9;
-    color: #d35400;
-}
-.section-who{
-    background-color: #E9E9E9;
-    color: #d35400;
-}
-.thumbnail-box {
-    background-color: #FF9900;
-    color: #FDFCFC;    
-}
-.thumbnail-info .name{
-    color: #FF9900;
-}
-.section-sign .cut{
-    color: #d35400;
-}
-.sign-background .cut{
-    color: #FDFCFC;
-}
-.modern {
-  color: #FDFCFC;
-}
-.section-sign a:hover, .section-sign a:active, .section-sign a:focus{
-   color: #FDFCFC;  
-}
-.section-sign .password a:hover{
-    color:#d35400;
-}
-.section-sign .account a:hover{
-    color:#d35400;
-}
-.section-sign .btn-avatar a:hover, .section-sign .btn-avatara:active, .section-sign .btn-avatar a:focus{
-   color: #FDFCFC;  
-}
-.section-blog .white-content{
-    background: #E9E9E9;  
-}
-.section-blog .category a{
-    color: #FDFCFC;
-}
-.section-blog .category ul li{
-    border-bottom: 2px solid #d35400;
-}
-.section-blog .category li:hover{
-    background: #FF9900;
-    color:#FDFCFC;
-}
-.section-blog .category li:hover a{
-    color:#FDFCFC;
-}
-.section-blog .popular a{
-  color: #FDFCFC;  
-}
-.section-blog .popular a:hover{
-  color: #E9E9E9;  
-}
-.section-blog .wrapper{
-    background-color: #d35400;
-    color: #FDFCFC;
-}
-.section-blog .wrapper h2{
-    color: #FDFCFC;
-}
-.post-form .visual i {
-    color: #FF9900;
-}
-.comment-author {
-    color: #d35400;
-}
-.comment-author span.reply {
-    color: #d35400;
-}
-.comment-author span.date {
-    color: #d35400;
-}
-.section-plan .cut{
-    color: #d35400;
-}
-.plan-background {
-    background: #E9E9E9;
-}
-.plan-pattern {
-    background: #FDFCFC;
-}
-.pricing .white-content{
-    background: #E9E9E9;
-}
-.dark-content {
-    color: #FDFCFC;
-    background-color: #d35400;
-}
-.dark-content hr{
-    border-color: #d35400;
-}
-hr {
-    border-color: #E9E9E9 -moz-use-text-color #E9E9E9;
-}
-.ribbon{  
-  background: #d35400;
-  color: #FDFCFC;
-}
-.ribbon:before, .ribbon:after {
-  border-top:   3px solid #d35400;   
-}
+
 .map-info{
     background: #FF9900;
     color: #FFF;
@@ -491,17 +215,17 @@ hr {
     background-color: #FDFCFC;
 }
 #container {
-  background: #FDFCFC;
+  background: #424242;
 }
 .thumbs a span {
     background: none repeat scroll 0 0 #FDFCFC;  
 }
 .btn {
   background: #FF9900;
-  color: white; }
+  color: #424242; }
   .btn:hover, .btn:focus {
     background-color: #d35400;
-    color: white; 
+    color: #424242; 
 }
 
 .btn-dark {
@@ -511,19 +235,7 @@ hr {
     background-color: #1A1A1A;
     color: white;
  }
-.section-soon{
-    background: #E9E9E9;   
-}
-.section-soon .countdown{
-    background: #FDFCFC;   
-}
-.section-soon .countdown .marker i{
-    color: #FF9900;
-}
-.section-updates{
-    background-color: #E9E9E9;
-    color: #d35400;
-}
+
 footer a {
     color: #FDFCFC;
 }
@@ -546,6 +258,12 @@ footer a:hover {
 }
 .footer-subscribe {
     color: #FDFCFC;
+}
+
+.section-wrapper {
+    padding-bottom: 30px;
+    padding-top: 30px;
+    background-color: #FDFCFC;
 }
 
 /* ===== @Tablets to Phones ===== */
