--- a/assets/themes/hive/css/honey.css
+++ b/assets/themes/hive/css/honey.css
@@ -898,10 +898,10 @@ button::-moz-focus-inner {
   border: 0;
 }
 ::selection {
-  background: #f3e5d5;
+  background: #424242;
 }
 ::-moz-selection {
-  background: #f3e5d5;
+  background: #424242;
 }
 
 /**********************************************************
