--- a/_includes/themes/hive/default.html
+++ b/_includes/themes/hive/default.html
@@ -147,177 +147,28 @@
           {% endfor %}
 	    </div>
 
-	<!-- start: hello -->
-<header>
-	<div class="section-wrapper">
-		<div class="container">
-			<div class="row">
-				<div class="span6">
-					<div class="separator">
-						<div class="left">
-							<div class="lines">
-								<div>
-								<h2 class="lines-title">Greetings!</h2>
-								</div>
-							</div>
+
+<!-- start: footer -->
+		<div class="post-footer">
+			<div class="container">
+				<div class="row">
+						<div class="span6">
+							<div class="copyright">{{ content }}</div>
 						</div>
-					</div>		
-					<i class="icon-check icon-4x pull-left icon-muted"></i><p>Hello, madam I'm Adam.  I am a grad student in the Research Educational Methodology program in the School of Education at the University of Colorado.  My studies, research and other work focus on student measurements (test scores) and their use in various educational policies.  Professionally I am a statistical gun for hire (independent contractor), but I work almost exclusively for the National Center for the Improvement of Educational Assessment.  Specifically, I work with states that use the "Student Growth Percentiles" model as part of the school (and teacher) accountability framework.</p>
-				</div>
-
-				<div class="span6">
-					<div class="separator">
-						<div class="left">
-							<div class="lines">
-								<div>
-								<h2 class="lines-title">Skills and Services </h2>
-								</div>
-							</div>
+						<div class="span6">
+							<ul class="footer-links">
+								{% for item in page.footer_social %}
+								<li>
+									<a class="thumbnail-social-icon" href="{{item.link}}"><img alt="" src="{{ ASSET_PATH }}/{{item.image}}"></a>
+								</li>
+					            {% endfor %}
+							</ul>
 						</div>
-					</div>	
-
-				<div class="accordion" id="accordion2">
-
-				  <div class="accordion-group">
-				    <div class="accordion-heading">
-				      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-				         Applied Statistics and Data Analysis<span class="accordion-icon"><i class="icon-angle-down"></i></span>
-				      </a>
-				    </div>
-				    <div id="collapseOne" class="accordion-body collapse in">
-				      <div class="accordion-inner">
-				        My experiences are almost exclusively in the use of statistical methods in the social sciences (with a brief foray into health sciences / otology).  I have extensive experience with "big data" from working with statewide educational data.  I am a big believer in communicating statistical results with visualizations and graphics.
-				      </div>
-				    </div>
-				  </div>
-
-				  <div class="accordion-group">
-				    <div class="accordion-heading">
-				      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-				        Programming, Development & Design <span class="accordion-icon"><i class="icon-angle-down"></i></span>
-				      </a>
-				    </div>
-				    <div id="collapseTwo" class="accordion-body collapse">
-				      <div class="accordion-inner">
-						  I am well versed in R, the open source statistical language.  I am author and co-author of several R packages.  I have also recently begun developing websites (such as this one) using various web programming languages, including html, css and javascript.  I am particularly interested in the D3, crossfire, and geo/topoJson javascript libraries.  I use Github extensively and exclusively for all my development projects and websites.
-				      </div>
-				    </div>
-				  </div>
-
-				  <div class="accordion-group">
-				    <div class="accordion-heading">
-				      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-				       High Performance Computing and Linux Administration<span class="accordion-icon"><i class="icon-angle-down"></i></span>
-				      </a>
-				    </div>
-				    <div id="collapseThree" class="accordion-body collapse">
-				      <div class="accordion-inner">
-						  I have extensive experience with parallel processing applications, including cluster computing (MPI and Socket) and Hadoop (Map/Reduce).  I typically use the Amazon Web Services (AWS) EC2 platform, but also have used the Janus Supercomputer at the University of Colorado for cluster computing applications.  I have also dabbled in GPU computing.  I use Linux/Unix alike environments for all my high performance computing applications.
-				      </div>
-				    </div>
-				  </div>
-
-				  <div class="accordion-group">
-				    <div class="accordion-heading">
-  				      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-  				        Master Chef <span class="accordion-icon"><i class="icon-angle-down"></i></span>
-  				      </a>
-  				    </div>
-  				    <div id="collapseFour" class="accordion-body collapse">
-  				      <div class="accordion-inner">
-  						  I am skilled, yet lack formal training in the arts.  A fat kid's intuition is all I need!  Sous vide anyone?  You buy I'll fry!
-  				      </div>
-				    </div>
-				  </div>
-
-				</div>
-
 				</div>
 			</div>
 		</div>
-	</div><!-- end: hello -->
-</header>
-
-<!-- start: footer
-<footer>
-	<div class="pre-footer">
-		<div class="container">
-			<div class="row-fluid">
-				<div class="section-wrapper clearfix">
-
-					<div class="span5">
-						<div class="separator">
-							<div class="">
-								<div class="lines">
-									<div>
-									<h3 class="lines-title">Latest tweet</h3>
-									</div>
-								</div>
-							</div>
-						</div>	
-						<div class="tweet"></div> 
-					</div>
-			
-					<div class="span3">
-						<div class="separator">
-							<div class="">
-								<div class="lines">
-									<div>
-									<h3 class="lines-title">Contact Even</h3>
-									</div>
-								</div>
-							</div>
-						</div>	
-						<ul class="contact-footer">
-							<li>
-								<i class="icon-map-marker"></i>  Angers, 49100, France
-							</li>
-							<li>
-								<i class="icon-phone"></i> (123) 456-7890
-							</li>
-							<li>
-								<i class="icon-envelope-alt"></i> contact@even.com
-							</li>
-							<li>
-								<i class="icon-globe"></i><a href="#">www.even.com</a> 
-							</li>							
-						</ul>
-
-						<p class="footer-subscribe"><strong>Subscribe for monthly updates:</strong></p>
-
-						<form id="newsletter">
-				              <input type="text" placeholder="Enter email adress">
-				              <button type="button" class="btn-dark btn-large">Send</button>
-						</form>						
-
-					</div>
-
-
-					<div class="span4">
-						<div class="separator">
-							<div class="">
-								<div class="lines">
-									<div>
-									<h3 class="lines-title">Work with us</h3>
-									</div>
-								</div>
-							</div>
-						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat perspiciatis facere voluptatibus nostrum nam sit sapiente vitae quasi fugit reiciendis dconsectetur adipisicing elit. Placeat perspiciatis facere voluptatibus nostrum nam sit sapiente vitae quasi fugit </p>				
-						<a class="span 4 project" href="contact.html"><button type="button" class="btn-dark btn-large">Start a project</button></a>
-
-					</div>
-
-
-				</div>
-			</div>
-		</div>
-	</div>
-
-</footer> end: footer -->
+<!-- end: footer -->
 
 
     </body>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
-	<script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
 </html>
