--- a/_includes/themes/hive/default.html
+++ b/_includes/themes/hive/default.html
@@ -56,7 +56,7 @@
                 <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="#nav-collapse-01"></button>
                 <div class="nav-collapse collapse" id="nav-collapse-01">
                   <ul class="nav">
-                    {% for item in page.navbar %}
+                    {% for item in site.navbar %}
 					<li>
                       <a href="{{item.link}}">
                          {{item.name}} 
@@ -96,49 +96,49 @@
 			{% if item.location == 'center' %}
 	        <!--  HERO -->
 	        <div style="margin-left: -126.5px; margin-top: -146.07px; z-index: 3;" class="patch hero-patch">
-	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/images/{{item.image}}');">
 					<span>{{item.description}}</span></a>
 	        </div>
 			{% endif %}
 			{% if item.location == 'upper_left' %}
 	        <!--  upper left hex -->
 	        <div style="margin-left: -253px; margin-top: -365.174px; z-index: 1;" class="patch">
-	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/images/{{item.image}}');">
 					<span>{{item.description}}</span></a>
 	        </div>
 			{% endif %}
 			{% if item.location == 'upper_right' %}
 	        <!--  upper right hex -->
 	        <div style="margin-left: 0px; margin-top: -365.174px; z-index: 1;" class="patch">
-	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/images/{{item.image}}');">
 					<span>{{item.description}}</span></a>
 	        </div>
 			{% endif %}
 			{% if item.location == 'center_left' %}
 	        <!--  center left hex -->
 	        <div style="margin-left: -379.5px; margin-top: -146.07px; z-index: 1;" class="patch">
-	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/images/{{item.image}}');">
 					<span>{{item.description}}</span></a>
 	        </div>
 			{% endif %}
 			{% if item.location == 'center_right' %}
 	        <!--  center right hex -->
 	        <div style="margin-left: 126.5px; margin-top: -146.07px; z-index: 1;" class="patch">
-	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/images/{{item.image}}');">
 					<span>{{item.description}}</span></a>
 	        </div>
 			{% endif %}
 			{% if item.location == 'lower_left' %}
 	        <!--  lower left hex -->
 	        <div style="margin-left: -253px; margin-top: 73.0348px; z-index: 1;" class="patch">
-	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/images/{{item.image}}');">
 					<span>{{item.description}}</span></a>
 	        </div>
 			{% endif %}
 			{% if item.location == 'lower_right' %}
 	        <!--  lower right hex -->
 	        <div style="margin-left: 0px; margin-top: 73.0348px; z-index: 1;" class="patch">
-	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+	        	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/images/{{item.image}}');">
 					<span>{{item.description}}</span></a>
 	        </div>
 			{% endif %}
@@ -157,7 +157,7 @@
 						<ul class="footer-links">
 							{% for item in site.footer_social %}
 							<li>
-								<a class="thumbnail-social-icon" href="{{item.link}}"><img alt="" src="{{ ASSET_PATH }}/{{item.image}}"></a>
+								<a class="thumbnail-social-icon" href="{{item.link}}"><img alt="" src="{{ ASSET_PATH }}/images/{{item.image}}"></a>
 							</li>
 				            {% endfor %}
 						</ul>
