Modify Jekyll Bootstrap "layouts" and add the actual pages.html layout for hive theme (to include several different page 'types')

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+theme:
+  name: hive
 ---
 {% include JB/setup %}
-{% include themes/hive/feature.html %}
+{% include themes/hive/page.html %}
