--- a/_includes/themes/hive/page.html
+++ b/_includes/themes/hive/page.html
@@ -139,6 +139,74 @@
 </header><!-- end: hello -->
 {% endif %}
 
+<div class="hive-grid-small hive-grid-inset">
+  {% for item in page.contents %}
+	{% if item.location == 'center' %}
+    <!--  HERO -->
+    <div style="margin-left: -126.5px; margin-top: -256.5px; z-index: 3;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+	{% if item.location == 'upper_farleft' %}
+    <!--  center left hex -->
+    <div style="margin-left: -632.5px; margin-top: -256.5px; z-index: 1;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+	{% if item.location == 'upper_left' %}
+    <!--  upper left hex -->
+    <div style="margin-left: -379.5px; margin-top: -256.5px; z-index: 1;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+	{% if item.location == 'upper_right' %}
+    <!--  upper right hex -->
+    <div style="margin-left: 126.5px; margin-top: -256.5px; z-index: 1;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+	{% if item.location == 'upper_farright' %}
+    <!--  center right hex -->
+    <div style="margin-left: 379.5px; margin-top: -256.5px; z-index: 1;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+	{% if item.location == 'lower_farleft' %}
+    <!--  lower left hex -->
+    <div style="margin-left: -506px; margin-top: -39px; z-index: 1;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+	{% if item.location == 'lower_left' %}
+    <!--  lower left hex -->
+    <div style="margin-left: -253px; margin-top: -39px; z-index: 1;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+	{% if item.location == 'lower_right' %}
+    <!--  lower right hex -->
+    <div style="margin-left: 0px; margin-top: -39px; z-index: 1;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+	{% if item.location == 'lower_farright' %}
+    <!--  lower right hex -->
+    <div style="margin-left: 253px; margin-top: -39px; z-index: 1;" class="patch">
+    	<a href="{{item.link}}" class="tip" style="background-image: url('{{ ASSET_PATH }}/{{item.image}}');">
+			<span>{{item.description}}</span></a>
+    </div>
+	{% endif %}
+  {% endfor %}
+</div>
+
 {% if page.page_type == 'PORTFOLIO' %}
 <!-- start: portfolio -->
 <div class="section-portfolio">
@@ -391,15 +459,6 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
 <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
 
-<script src="assets/js/modernizr.js"></script>
-<script src="assets/js/ba-cond.js"></script>
-<script src="assets/js/slitslider.js"></script>
-<script src="assets/js/isotope.js"></script>
-<script src="assets/js/cookie.js"></script>
-<script src="assets/js/checkbox_and_radio.js"></script>
-<script src="assets/js/dropkick.js"></script>
-<script src="assets/js/tweet.js"></script>
-<script src="assets/js/custom.js"></script>
 <!-- end: script -->
 
 </body>
