--- a/assets/themes/hive/css/honey.css
+++ b/assets/themes/hive/css/honey.css
@@ -1411,6 +1411,11 @@ button::-moz-focus-inner {
 .row3 {
   top: -161.5px;
 }
+
+/***************************************************
+ *                   Hive grid                     *
+ ***************************************************/
+
 .hive-grid {
   height:732.5px;
   margin-top: 76px;
@@ -1454,6 +1459,50 @@ button::-moz-focus-inner {
   opacity: 1;
   -webkit-transform: translate3d(0, -4px, 0) scale3d(1, 1, 1);
 }
+
+.hive-grid-small {
+  height: 513px;
+  background-image: url('/assets/themes/hive/images/honeycomb/honeycomb_small_1.5-blur.png');
+  background-position: center;
+  position: relative;
+  overflow: hidden;
+}
+.hive-grid-small .patch {
+  position: absolute;
+  top: 50%;
+  margin-top: -146px;
+  left: 50%;
+  margin-left: -126.5px;
+  opacity: .5;
+  -webkit-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  -webkit-transition: -webkit-transform 0.2s ease-in-out, opacity 0.1s ease-in-out;
+  -webkit-backface-visibility: hidden;
+}
+.hive-grid-small .patch a {
+  display: block;
+  width: 253px;
+  height: 291px;
+  line-height: -5; /* needed for hover tip tool */
+  z-index: 1;
+  position: relative;
+}
+.hive-grid-small .patch.hero-patch {
+  z-index: 2;
+  opacity: 1;
+}
+.hive-grid-small .patch.hero-patch .blank {
+  text-shadow: 0 0 80px rgba(0, 0, 0, 0.8);
+}
+.hive-grid-small .patch.loading {
+  -webkit-transform: translate3d(0, 0, 0) scale3d(0, 0, 0);
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55), opacity 0.1s ease-in-out;
+  opacity: 0;
+}
+.hive-grid-small .patch:hover { /*  changed from .patch.hover  to get hover to work  */
+  opacity: 1;
+  -webkit-transform: translate3d(0, -4px, 0) scale3d(1, 1, 1);
+}
+
 .hive-grid-inset:before {
   pointer-events: none;
   content: "";
@@ -1462,7 +1511,6 @@ button::-moz-focus-inner {
   position: absolute;
   top: 0;
   left: -10%;
-  background-color: black;
   opacity: 0.2;
   z-index: 6;
 }
@@ -1474,7 +1522,6 @@ button::-moz-focus-inner {
   position: absolute;
   bottom: 0;
   left: -10%;
-  background-color: black;
   opacity: 0.2;
   z-index: 5;
 }
